<resources>
    <string name="keyboard_skin_id_default">keyboard_android_default</string>
    <string name="keyboard_skinadd_id_default" />
    <string name="mushroom_id_default">notuse</string>
    <string name="auto_cursor_movement_id_default">1200</string>
    <string name="choose_language_default_value">ja</string>
    <string name="input_mode_type_entry_default_value">2</string>
    <string name="setting_landscape_default_value">1</string>
    <string name="setting_portrait_default_value">2</string>
    <string name="ti_ime_name_standard_txt">iWnn IME</string>
    <string name="ti_ime_name_setting_title_standard_txt">iWnn IME settings</string>
    <string name="ti_preference_lang_setting_menu_txt">Language</string>
    <string name="ti_preference_language_summary_txt">Select language</string>
    <string name="ti_preference_key_setting_menu_txt">Common Keyboard Settings</string>
    <string name="ti_preference_display_language_switch_key_txt">Display language switch key</string>
    <string name="ti_preference_change_otherime_title_txt">Switch to other input methods</string>
    <string name="ti_preference_change_otherime_summary_txt">Language switch key also covers other input methods</string>
    <string name="ti_preference_key_sound_title_txt">Sound on Key Press</string>
    <string name="ti_preference_key_sound_summary_txt">Enable key click sound</string>
    <string name="ti_preference_key_vibration_title_txt">Vibrate on Key Press</string>
    <string name="ti_preference_key_vibration_summary_txt">Enable key click vibration</string>
    <string name="ti_preference_preview_title_txt">Key Preview</string>
    <string name="ti_preference_preview_summary_txt">Enable key preview</string>
    <string name="ti_preference_auto_caps_title_txt">Auto Capitalization</string>
    <string name="ti_preference_auto_caps_summary_txt">Automatically capitalize the 1st char of a sentence in alphabet mode</string>
    <string name="ti_preference_auto_space_title_txt">Auto Space Input</string>
    <string name="ti_preference_auto_space_summary_txt">Automatically input a space after selecting a candidate in alphabet mode</string>
    <string name="ti_preference_voice_input_title_txt">Voice Input</string>
    <string name="ti_preference_voice_input_summary_txt">Enable voice input</string>
    <string name="ti_preference_fullscreen_mode_title_txt">Fullscreen Mode</string>
    <string name="ti_preference_fullscreen_mode_summary_txt">Enable fullscreen mode</string>
    <string name="ti_preference_key_height_title_txt">Key Size</string>
    <string name="ti_preference_key_height_summary_txt">Set keyboard size for each orientation</string>
    <string name="ti_preference_key_height_portrait_title_txt">Portrait</string>
    <string name="ti_preference_key_height_landscape_title_txt">Landscape</string>
    <string name="ti_preference_key_height_clear_txt">Reset</string>
    <string name="ti_preference_kana_roman_input_mode_title_txt">Roman letter/Kana letter</string>
    <string name="ti_preference_kana_roman_input_mode_summary_txt">Choose input mode between \"Roman letter\" and \"Kana letter\" (Hardware keyboard only)</string>
    <string name="ti_preference_roman_letter_txt">Roman letter</string>
    <string name="ti_preference_kana_letter_txt">Kana letter</string>
    <string name="ti_preference_keyboard_type_title_txt">Keyboard Type</string>
    <string name="ti_preference_keyboard_type_summary_txt">Set keyboard type for each orientation and input mode</string>
    <string name="ti_preference_keyboard_type_portrait_title_txt">Portrait Keyboard Type Setting</string>
    <string name="ti_preference_keyboard_type_landscape_title_txt">Landscape Keyboard Type Setting</string>
    <string name="ti_preference_keyboard_type_common_12_title_txt">10-key Keyboard</string>
    <string name="ti_preference_keyboard_type_common_12_summary_txt">Set 10-key keyboard as common keyboard type for all input modes</string>
    <string name="ti_preference_keyboard_type_common_12_message_txt">"This function sets to display 10-key keyboard in all input modes.
Are you sure?"</string>
    <string name="ti_preference_keyboard_type_common_qwerty_title_txt">QWERTY Keyboard</string>
    <string name="ti_preference_keyboard_type_common_qwerty_summary_txt">Set QWERTY keyboard as common keyboard type for all input modes</string>
    <string name="ti_preference_keyboard_type_common_qwerty_message_txt">"This function sets to display QWERTY keyboard in all input modes.
Are you sure?"</string>
    <string name="ti_preference_keyboard_type_common_last_title_txt">Last Used Keyboard</string>
    <string name="ti_preference_keyboard_type_common_last_summary_txt">Set last used keyboard as common keyboard type for all input modes</string>
    <string name="ti_key_12key_switch_full_hiragana_txt">あ</string>
    <string name="ti_key_12key_switch_full_katakana_txt">カ</string>
    <string name="ti_key_12key_switch_full_alphabet_txt">Ａ</string>
    <string name="ti_key_12key_switch_full_number_txt">１</string>
    <string name="ti_key_12key_switch_half_katakana_txt">ｶﾅ</string>
    <string name="ti_key_12key_switch_half_alphabet_txt">AB</string>
    <string name="ti_key_12key_switch_half_number_txt">12</string>
    <string name="ti_alternates_q_jajp_qwerty_en_shift_off_txt">1Q</string>
    <string name="ti_alternates_w_jajp_qwerty_en_shift_off_txt">2W</string>
    <string name="ti_alternates_e_jajp_qwerty_en_shift_off_txt">3Eèéêëē</string>
    <string name="ti_alternates_r_jajp_qwerty_en_shift_off_txt">4R</string>
    <string name="ti_alternates_t_jajp_qwerty_en_shift_off_txt">5T</string>
    <string name="ti_alternates_y_jajp_qwerty_en_shift_off_txt">6Y</string>
    <string name="ti_alternates_u_jajp_qwerty_en_shift_off_txt">7Uûüùúū</string>
    <string name="ti_alternates_i_jajp_qwerty_en_shift_off_txt">8Iîïíīì</string>
    <string name="ti_alternates_o_jajp_qwerty_en_shift_off_txt">9Oôöòóœøōõ</string>
    <string name="ti_alternates_p_jajp_qwerty_en_shift_off_txt">0P</string>
    <string name="ti_alternates_q_jajp_qwerty_en_shift_on_txt">1q</string>
    <string name="ti_alternates_w_jajp_qwerty_en_shift_on_txt">2w</string>
    <string name="ti_alternates_e_jajp_qwerty_en_shift_on_txt">3eЀÉÊЁĒ</string>
    <string name="ti_alternates_r_jajp_qwerty_en_shift_on_txt">4r</string>
    <string name="ti_alternates_t_jajp_qwerty_en_shift_on_txt">5t</string>
    <string name="ti_alternates_y_jajp_qwerty_en_shift_on_txt">6y</string>
    <string name="ti_alternates_u_jajp_qwerty_en_shift_on_txt">7uÛÜÙÚŪ</string>
    <string name="ti_alternates_i_jajp_qwerty_en_shift_on_txt">8iÎÏÍÌĪ</string>
    <string name="ti_alternates_o_jajp_qwerty_en_shift_on_txt">9oÔÖÒÓŒØŌÕ</string>
    <string name="ti_alternates_p_jajp_qwerty_en_shift_on_txt">0p</string>
    <string name="ti_alternates_q_jajp_qwerty_ja_shift_off_txt">1Q</string>
    <string name="ti_alternates_w_jajp_qwerty_ja_shift_off_txt">2W</string>
    <string name="ti_alternates_e_jajp_qwerty_ja_shift_off_txt">3E</string>
    <string name="ti_alternates_r_jajp_qwerty_ja_shift_off_txt">4R</string>
    <string name="ti_alternates_t_jajp_qwerty_ja_shift_off_txt">5T</string>
    <string name="ti_alternates_y_jajp_qwerty_ja_shift_off_txt">6Y</string>
    <string name="ti_alternates_u_jajp_qwerty_ja_shift_off_txt">7U</string>
    <string name="ti_alternates_i_jajp_qwerty_ja_shift_off_txt">8I</string>
    <string name="ti_alternates_o_jajp_qwerty_ja_shift_off_txt">9O</string>
    <string name="ti_alternates_p_jajp_qwerty_ja_shift_off_txt">0P</string>
    <string name="ti_alternates_q_jajp_qwerty_ja_shift_on_txt">1q</string>
    <string name="ti_alternates_w_jajp_qwerty_ja_shift_on_txt">2w</string>
    <string name="ti_alternates_e_jajp_qwerty_ja_shift_on_txt">3e</string>
    <string name="ti_alternates_r_jajp_qwerty_ja_shift_on_txt">4r</string>
    <string name="ti_alternates_t_jajp_qwerty_ja_shift_on_txt">5t</string>
    <string name="ti_alternates_y_jajp_qwerty_ja_shift_on_txt">6y</string>
    <string name="ti_alternates_u_jajp_qwerty_ja_shift_on_txt">7u</string>
    <string name="ti_alternates_i_jajp_qwerty_ja_shift_on_txt">8i</string>
    <string name="ti_alternates_o_jajp_qwerty_ja_shift_on_txt">9o</string>
    <string name="ti_alternates_p_jajp_qwerty_ja_shift_on_txt">0p</string>
    <string name="ti_alternates_q_jajp_qwerty_ja_full_katakana_shift_off_txt">１Q</string>
    <string name="ti_alternates_w_jajp_qwerty_ja_full_katakana_shift_off_txt">２W</string>
    <string name="ti_alternates_e_jajp_qwerty_ja_full_katakana_shift_off_txt">３E</string>
    <string name="ti_alternates_r_jajp_qwerty_ja_full_katakana_shift_off_txt">４R</string>
    <string name="ti_alternates_t_jajp_qwerty_ja_full_katakana_shift_off_txt">５T</string>
    <string name="ti_alternates_y_jajp_qwerty_ja_full_katakana_shift_off_txt">６Y</string>
    <string name="ti_alternates_u_jajp_qwerty_ja_full_katakana_shift_off_txt">７U</string>
    <string name="ti_alternates_i_jajp_qwerty_ja_full_katakana_shift_off_txt">８I</string>
    <string name="ti_alternates_o_jajp_qwerty_ja_full_katakana_shift_off_txt">９O</string>
    <string name="ti_alternates_p_jajp_qwerty_ja_full_katakana_shift_off_txt">０P</string>
    <string name="ti_alternates_q_jajp_qwerty_ja_full_katakana_shift_on_txt">１q</string>
    <string name="ti_alternates_w_jajp_qwerty_ja_full_katakana_shift_on_txt">２w</string>
    <string name="ti_alternates_e_jajp_qwerty_ja_full_katakana_shift_on_txt">３e</string>
    <string name="ti_alternates_r_jajp_qwerty_ja_full_katakana_shift_on_txt">４r</string>
    <string name="ti_alternates_t_jajp_qwerty_ja_full_katakana_shift_on_txt">５t</string>
    <string name="ti_alternates_y_jajp_qwerty_ja_full_katakana_shift_on_txt">６y</string>
    <string name="ti_alternates_u_jajp_qwerty_ja_full_katakana_shift_on_txt">７u</string>
    <string name="ti_alternates_i_jajp_qwerty_ja_full_katakana_shift_on_txt">８i</string>
    <string name="ti_alternates_o_jajp_qwerty_ja_full_katakana_shift_on_txt">９o</string>
    <string name="ti_alternates_p_jajp_qwerty_ja_full_katakana_shift_on_txt">０p</string>
    <string name="ti_alternates_q_jajp_qwerty_en_full_alphabet_shift_off_txt">１Ｑ</string>
    <string name="ti_alternates_w_jajp_qwerty_en_full_alphabet_shift_off_txt">２Ｗ</string>
    <string name="ti_alternates_e_jajp_qwerty_en_full_alphabet_shift_off_txt">３Ｅ</string>
    <string name="ti_alternates_r_jajp_qwerty_en_full_alphabet_shift_off_txt">４Ｒ</string>
    <string name="ti_alternates_t_jajp_qwerty_en_full_alphabet_shift_off_txt">５Ｔ</string>
    <string name="ti_alternates_y_jajp_qwerty_en_full_alphabet_shift_off_txt">６Ｙ</string>
    <string name="ti_alternates_u_jajp_qwerty_en_full_alphabet_shift_off_txt">７Ｕ</string>
    <string name="ti_alternates_i_jajp_qwerty_en_full_alphabet_shift_off_txt">８Ｉ</string>
    <string name="ti_alternates_o_jajp_qwerty_en_full_alphabet_shift_off_txt">９Ｏ</string>
    <string name="ti_alternates_p_jajp_qwerty_en_full_alphabet_shift_off_txt">０Ｐ</string>
    <string name="ti_alternates_q_jajp_qwerty_en_full_alphabet_shift_on_txt">１ｑ</string>
    <string name="ti_alternates_w_jajp_qwerty_en_full_alphabet_shift_on_txt">２ｗ</string>
    <string name="ti_alternates_e_jajp_qwerty_en_full_alphabet_shift_on_txt">３ｅ</string>
    <string name="ti_alternates_r_jajp_qwerty_en_full_alphabet_shift_on_txt">４ｒ</string>
    <string name="ti_alternates_t_jajp_qwerty_en_full_alphabet_shift_on_txt">５ｔ</string>
    <string name="ti_alternates_y_jajp_qwerty_en_full_alphabet_shift_on_txt">６ｙ</string>
    <string name="ti_alternates_u_jajp_qwerty_en_full_alphabet_shift_on_txt">７ｕ</string>
    <string name="ti_alternates_i_jajp_qwerty_en_full_alphabet_shift_on_txt">８ｉ</string>
    <string name="ti_alternates_o_jajp_qwerty_en_full_alphabet_shift_on_txt">９ｏ</string>
    <string name="ti_alternates_p_jajp_qwerty_en_full_alphabet_shift_on_txt">０ｐ</string>
</resources>